--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,15 +1,7 @@
-.ant-modal-content {
-  background: rgba(192, 192, 192, 0.2);
-  border: 1px solid rgba(192, 192, 192, 0.2);
-  box-shadow: 0px 4px 24px rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(20px);
-  border-radius: 16px;
-}
 /*default version*/
 @font-face {
   font-family: "Martian Mono";
-  src: local("Martian Mono"),
-    url("fonts/martian_mono/ttf/MartianMono-StdRg.ttf") format("truetype");
+  src: local("Martian Mono"), url("fonts/martian_mono/ttf/MartianMono-StdRg.ttf") format("truetype");
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
@@ -24,6 +16,13 @@ body {
   overflow: auto;
 }
 /* ant overrides */
+.ant-modal-content {
+  background: rgba(192, 192, 192, 0.2);
+  border: 1px solid rgba(192, 192, 192, 0.2);
+  box-shadow: 0px 4px 24px rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  border-radius: 16px;
+}
 .ant-modal-header {
   background: transparent;
 }
