--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,7 +1,8 @@
 /*default version*/
 @font-face {
   font-family: "Martian Mono";
-  src: local("Martian Mono"), url("fonts/martian_mono/ttf/MartianMono-StdRg.ttf") format("truetype");
+  src: local("Martian Mono"),
+    url("fonts/martian_mono/ttf/MartianMono-StdRg.ttf") format("truetype");
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
@@ -89,4 +90,24 @@ body {
 
 .ant-card {
   background: transparent;
+}
+
+.ant-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  gap: 8px;
+
+  width: 40px;
+  height: 40px;
+
+  /* On Secondary */
+
+  background: rgba(26, 26, 27, 0.4);
+  /* Grey */
+
+  border: 1px solid rgba(192, 192, 192, 0.2);
+  border-radius: 8px;
 }
