--- a/client/src/global.css
+++ b/client/src/global.css
@@ -110,3 +110,7 @@ body {
   border: 1px solid rgba(192, 192, 192, 0.2);
   border-radius: 8px;
 }
+
+.ant-btn:hover {
+  background: rgba(26, 26, 27, 0.8);
+}
